PO-1902-Search-Minor-Creditors-POST
updating test coverage